--- a/static/views/feeds/list.html
+++ b/static/views/feeds/list.html
@@ -1,6 +1,10 @@
 <h2>Feeds</h2>
 <hr />
 
+<a href="/feeds/create">
+  <button>Create a new feed</button>
+</a>
+
 <ol>
   {{ range .Feeds -}}
   <li>
@@ -11,5 +15,3 @@
   </li>
   {{- end }}
 </ol>
-
-<a href="/feeds/create">Create</a>
