feat: Add description meta

--- a/static/views/layout.html
+++ b/static/views/layout.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ with .Data }}{{ with .Title }}{{ . }} - {{ end }}{{ end }}Myfeed</title>
+  <meta name="description" content="Free and open-source tool to create, read and share custom aggregated feeds">
   <link rel="stylesheet" href="/styles/water.css">
   <link rel="stylesheet" href="/styles/custom.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
