feat: Added global header

--- a/static/assets/styles/custom.css
+++ b/static/assets/styles/custom.css
@@ -21,3 +21,14 @@
 .form-error {
   color: #ff7272;
 }
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header a {
+  color: inherit !important;
+}
