--- a/static/assets/styles/custom.css
+++ b/static/assets/styles/custom.css
@@ -26,9 +26,30 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+}
+
+header .logo a {
+  font-size: 1.1rem;
+}
+
+header .menu {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+header .menu a {
+  opacity: 0.8;
 }
 
 header a {
   color: inherit !important;
+}
+
+header .account a {
+  text-decoration: underline;
 }
