--- a/static/views/feeds/create.html
+++ b/static/views/feeds/create.html
@@ -1,4 +1,4 @@
-<h3>Create a New Feed</h3>
+<h3>Create a new feed</h3>
 <hr />
 
 <form method="post">
@@ -8,6 +8,6 @@
   </div>
 
   <div class="form-group">
-    <button type="submit">Create</button>
+    <button type="submit">Add sources</button>
   </div>
 </form>
