--- a/static/views/register.html
+++ b/static/views/register.html
@@ -9,13 +9,18 @@
     {{- end }}
 
     <div class="form-group">
+        <label for="username" class="form-label">Username:</label>
+        <input type="text" class="form-control" name="username" id="username" autocomplete="username" required />
+    </div>
+
+    <div class="form-group">
         <label for="email" class="form-label">Email:</label>
         <input type="email" class="form-control" name="email" id="email" required />
     </div>
 
     <div class="form-group">
         <label for="password" class="form-label">Password:</label>
-        <input type="password" class="form-control" name="password" id="password" required />
+        <input type="password" class="form-control" name="password" id="password" autocomplete="password" required />
     </div>
 
     <button type="submit">Continue</button>
