--- a/static/views/index.html
+++ b/static/views/index.html
@@ -15,7 +15,19 @@
 
 <div>
   {{ if .User -}}
+  {{ with .Feeds }}
+  <h2>Your feeds</h2>
+  {{ range . -}}
+  <div>
+    <p>
+      <strong><a href="/feeds/{{ .Id }}">{{ .Name }}</a></strong><br/>
+      <small><a href="/feeds/{{ .Id }}/edit">Edit</a></small>
+    </p>
+  </div>
+  {{- end }}
+  {{- else -}}
   <a href="/feeds"><button>Browse feeds</button></a>
+  {{- end }}
   {{- else -}}
   <a href="/register"><button>Create an account</button></a>
   <span>or</span>
